Got middle fixed logo // now make it transition like houston-uncovered

--- a/css/app.css
+++ b/css/app.css
@@ -2039,21 +2039,7 @@ table.hover tr:nth-of-type(even):hover { background-color: #ececec; }
 
 .long-delay { animation-delay: 700ms !important; }
 
-header { width: 100%; }
-
-header nav ul.menu { background: #000; }
-
-header nav ul.menu li a { padding: 1.5rem 0; font-size: 1.375rem; color: #fff; letter-spacing: 0.09375rem; }
-
-@media screen and (max-width: 39.9375em) { header nav ul.menu li a { font-size: 1.125rem; padding: 1.125rem; } }
-
-header nav ul.menu li a:hover { background: #f1f1f1; color: #000; }
-
-@media screen and (max-width: 39.9375em) { header nav ul.menu li a:focus { background: #f1f1f1; color: #000; } }
-
-header nav ul.menu li.logo { padding-top: 1rem; }
-
-header nav ul.menu li.logo img { max-width: 250px; width: 100%; height: auto; }
+header #logo-bar { position: absolute; left: 50%; transform: translateX(-50%); }
 
 .title-bar, #top-bar-nav { position: fixed; top: 0; left: 0; width: 100%; background: #000; }
 
@@ -2068,6 +2054,22 @@ header nav ul.menu li.logo img { max-width: 250px; width: 100%; height: auto; }
 @media screen and (min-width: 40em) { .custom-dropdown-pane.dropdown-pane { visibility: visible !important; top: 0 !important; } }
 
 .dropdown-pane#hidden-menu { display: none; visibility: hidden; }
+
+@media screen and (min-width: 40em) { nav { height: 70px; overflow: hidden; background: #000; } }
+
+nav ul.menu li { vertical-align: top; }
+
+nav ul.menu li a { padding: 1.5rem 0; font-size: 1.375rem; color: #fff; letter-spacing: 0.09375rem; }
+
+@media screen and (max-width: 39.9375em) { nav ul.menu li a { font-size: 1.125rem; padding: 1.125rem; } }
+
+nav ul.menu li a:hover { background: #f1f1f1; color: #000; }
+
+@media screen and (max-width: 39.9375em) { nav ul.menu li a:focus { background: #f1f1f1; color: #000; } }
+
+nav ul.menu li.logo { padding-top: 1rem; }
+
+nav ul.menu li.logo img { max-width: 250px; width: 100%; height: auto; }
 
 html, body { height: 100%; }
 
